IE sidebar fix - closses issue #18

--- a/angular/app/sidebar/sidebar.less
+++ b/angular/app/sidebar/sidebar.less
@@ -30,8 +30,9 @@
 	cursor: pointer;
 }
 
-.Sidebar-page div{
-	width: 100%;
+.Sidebar-page md-list-item{
+	/*IE centering fix*/
+	height: 48px;
 }
 
 .Sidebar-page.active{
