--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,120 +1,2 @@
-md-toast[md-theme=warn] {
-  background-color: #F44336;
-  border-radius: 2px;
-}
-
-.Header {
-  position: fixed;
-  left: 250px;
-  right: 0;
-}
-.Header-star {
-  margin-right: -5px;
-}
-
-.Landing-CallToAction {
-  text-align: center;
-}
-.Landing-flex {
-  min-height: 50px;
-  padding: 5px;
-  color: white;
-}
-.Landing-flex33 {
-  background-color: #009688;
-}
-.Landing-flex55 {
-  background-color: #3949ab;
-}
-.Landing-flexRemaining {
-  background-color: #9c27b0;
-}
-.Landing-demoIcon {
-  fill: #009688;
-  position: relative;
-  top: 4px;
-  left: 5px;
-}
-
-.Sidebar {
-  position: fixed !important;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 250px !important;
-  min-width: 250px !important;
-  max-width: 250px !important;
-  background-color: #3f51b5;
-}
-.Sidebar-title {
-  font-size: 25px;
-  height: 100px;
-  max-height: 100px;
-  text-align: center;
-  font-weight: 500;
-}
-.Sidebar-pages {
-  background-color: #3f51b5;
-  color: white;
-}
-.Sidebar-pages md-list md-list-item button.md-button:not([disabled]):hover {
-  background-color: rgba(158, 158, 158, 0.2) !important;
-}
-.Sidebar-page {
-  cursor: pointer;
-}
-.Sidebar-page md-list-item {
-  /*IE centering fix*/
-  height: 48px;
-}
-.Sidebar-page.active {
-  background-color: rgba(158, 158, 158, 0.3) !important;
-}
-.Sidebar-version {
-  margin: 0 0 20px 0;
-  text-align: center;
-}
-
-body {
-  padding-bottom: 0 !important;
-}
-.Page {
-  left: 290px;
-  top: 100px;
-  right: 40px;
-  /*to prevent flickering during animation*/
-  position: absolute;
-}
-.PageToolbar {
-  border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
-}
-.PageContent {
-  border-radius: 3px;
-}
-.PageText {
-  padding: 20px;
-}
-pre[class*="language-"] {
-  border-radius: 0 !important;
-}
-
-.Dashboard-Container li {
-  line-height: 26px;
-}
-
-[ui-view].ng-enter,
-[ui-view].ng-leave {
-  transition: opacity ease-in-out 200ms;
-}
-[ui-view].ng-enter,
-[ui-view].ng-leave.ng-leave-active {
-  opacity: 0;
-}
-[ui-view].ng-enter.ng-enter-active {
-  opacity: 1;
-}
-
-/*less code specific for add_item dialog*/
-
+.Landing-CallToAction,.Sidebar-title,.Sidebar-version{text-align:center}md-toast[md-theme=warn]{background-color:#F44336;border-radius:2px}.Header{position:fixed;left:250px;right:0}.Header-star{margin-right:-5px}.Landing-flex{min-height:50px;padding:5px;color:#fff}.Landing-flex33{background-color:#009688}.Landing-flex55{background-color:#3949ab}.Landing-flexRemaining{background-color:#9c27b0}.Sidebar,.Sidebar-pages{background-color:#3f51b5}.Landing-demoIcon{fill:#009688;position:relative;top:4px;left:5px}.Sidebar{position:fixed!important;top:0;bottom:0;left:0;width:250px!important;min-width:250px!important;max-width:250px!important}.Sidebar-title{font-size:25px;height:100px;max-height:100px;font-weight:500}.Sidebar-pages{color:#fff}.Sidebar-pages md-list md-list-item button.md-button:not([disabled]):hover{background-color:rgba(158,158,158,.2)!important}.Sidebar-page{cursor:pointer}.Sidebar-page md-list-item{height:48px}.Sidebar-page.active{background-color:rgba(158,158,158,.3)!important}.Sidebar-version{margin:0 0 20px}body{padding-bottom:0!important}.Page{left:290px;top:100px;right:40px;position:absolute}.PageToolbar{border-top-right-radius:3px;border-top-left-radius:3px}.PageContent{border-radius:3px}.PageText{padding:20px}pre[class*=language-]{border-radius:0!important}.Dashboard-Container li{line-height:26px}[ui-view].ng-enter,[ui-view].ng-leave{transition:opacity ease-in-out 200ms}[ui-view].ng-enter,[ui-view].ng-leave.ng-leave-active{opacity:0}[ui-view].ng-enter.ng-enter-active{opacity:1}
 /*# sourceMappingURL=app.css.map */
