fixed sidebar version style

--- a/angular/app/sidebar/sidebar.less
+++ b/angular/app/sidebar/sidebar.less
@@ -42,4 +42,9 @@
 .Sidebar-version{
 	margin: 0 0 20px 0;
 	text-align: center;
+    font-weight: normal;
+}
+
+.Sidebar-version a{
+    color: white;
 }
