--- a/public/views/app/unsupported_browser/unsupported_browser.html
+++ b/public/views/app/unsupported_browser/unsupported_browser.html
@@ -8,7 +8,7 @@
 	</md-toolbar>
 
 	<div class="u-center">
-		<img src="http://i.imgur.com/5sRuLSo.png" alt="Unsupported Browser Page for IE <= 10">
+		<img src="https://i.imgur.com/5sRuLSo.png" alt="Unsupported Browser Page for IE <= 10">
 	</div>
 
 	<div class="PageText">
