App restructure and responsive additions.

--- a/angular/app/sidebar/sidebar.less
+++ b/angular/app/sidebar/sidebar.less
@@ -1,12 +1,12 @@
 .Sidebar {
-	position: fixed !important;
-	top: 0;
-	bottom: 0;
-	left: 0;
 	width: 250px !important;
 	min-width: 250px !important;
 	max-width: 250px !important;
 	background-color: rgb(63, 81, 181);
+}
+
+.Sidebar-header {
+    min-height: inherit;
 }
 
 .Sidebar-title {
