--- a/angular/material/page.less
+++ b/angular/material/page.less
@@ -1,13 +1,9 @@
 body{
-	padding-bottom: 0 !important;
+  background: #f2f2f2;
 }
 
 .Page{
-	left: 290px;
-	top: 100px;
-	right: 40px;
-	/*to prevent flickering during animation*/
-	position: absolute;
+	background: transparent;
 }
 
 .PageToolbar{
@@ -17,6 +13,8 @@ body{
 
 .PageContent{
 	border-radius: 3px;
+    margin: 8px;
+    background: white;
 }
 
 .PageText{
