--- a/angular/material/page.less
+++ b/angular/material/page.less
@@ -1,35 +1,47 @@
 body {
-    background: #f2f2f2;
+  background: #f2f2f2;
+}
+
+// https://github.com/angular/material/issues/2914
+md-input-container {
+  .md-input {
+    border-style: solid;
+  }
 }
 
 .Page {
-	background: transparent;
+  background: transparent;
 
-  	.Page-Container {
-	    background: transparent;
-	    padding: 8px;
+  .Page-Container {
+    background: transparent;
+    padding: 8px 16px;
 
-		md-card {
-			width: 940px;
+    md-card {
+      width: 940px;
 
-		  	md-toolbar:first-child {
-			  border-radius:3px 3px 0 0;
-			}
+      md-toolbar:first-child {
+        border-radius: 3px 3px 0 0;
+      }
 
-			@media (max-width: 1240px) {
-			  width: 100%;
-			}
-		}
+      md-card-content.language-markup {
+        padding: 8px 0 0 0;
+      }
 
-		md-card:last-child {
-			margin-bottom: 16px;
-		}
+      md-card-content {
+        li {
+          line-height: 26px;
+        }
+      }
 
-		pre[class*="language-"]{
-			border-radius: 0 !important;
-		    margin-bottom: 0;
-		}
-	}
+      // Responsive break point for cards.
+      @media (max-width: 1240px) {
+        width: 100%;
+      }
+    }
+
+    pre[class*="language-"] {
+      border-radius: 0;
+      margin-bottom: 0;
+    }
+  }
 }
-
-
