Fix content jump from last commit!

--- a/angular/material/transitions.less
+++ b/angular/material/transitions.less
@@ -13,7 +13,7 @@
   opacity: 1;
 }
 
-// Stop the page jump when Transitioning from page to page.
+// Stop the page jump when transitioning from page to page.
 .Page.ng-leave.ng-leave-active {
   display: none;
 }
