done with dingo/api documentation

--- a/public/views/app/generators/generators.html
+++ b/public/views/app/generators/generators.html
@@ -22,10 +22,10 @@ artisan ng:config name     #New config inside angular/config/</code></pre>
                 Do <strong>not</strong> append the words Service, Controller or Ctrl.
             </p>
             <p>
-                They will be automatically created according to the <a href="http://laravel.com/docs/5.1/helpers#method-studly-case" target="_blank">StudlyCase</a> of the name you entered.
+                They will be automatically created according to the <a href="laravel.com/docs/5.1/helpers#method-studly-case" target="_blank">StudlyCase</a> of the name you entered.
             </p>
             <p>
-                Use the <a href="http://laravel.com/docs/5.1/helpers#method-snake-case" target="_blank">snake_case</a> for more than 1 word: add_users, add_items, edit_data
+                Use the <a href="laravel.com/docs/5.1/helpers#method-snake-case" target="_blank">snake_case</a> for more than 1 word: add_users, add_items, edit_data
             </p>
         </md-card-content>
 
