--- a/angular/material/page.less
+++ b/angular/material/page.less
@@ -41,6 +41,7 @@ md-input-container {
 
     pre[class*="language-"] {
       border-radius: 0;
+      margin-top: 0;
       margin-bottom: 0;
     }
   }
