--- a/public/views/app/install/install.html
+++ b/public/views/app/install/install.html
@@ -15,10 +15,11 @@
 		<md-card-content class="language-markup"><pre><code class="line-numbers language-* language-bash">
 composer create-project jadjoubran/laravel5-angular-material-starter --prefer-dist
 cd laravel5-angular-material-starter
-#fix database credentials in .env
+#fix database credentials, add API_API_PREFIX and API_DOMAIN entries to .env
 npm install -g gulp bower
 npm install
 bower install
+php artisan migrate
 gulp && gulp watch
 php artisan serve</code></pre>
 		</md-card-content>
@@ -30,5 +31,6 @@ php artisan serve</code></pre>
 		</md-card-content>
 
 	</md-card>
+
 
 </md-content>
