--- a/public/views/app/install/install.html
+++ b/public/views/app/install/install.html
@@ -15,7 +15,7 @@
 		<md-card-content class="language-markup"><pre><code class="line-numbers language-* language-bash">
 composer create-project jadjoubran/laravel5-angular-material-starter --prefer-dist
 cd laravel5-angular-material-starter
-#fix database credentials, add API_API_PREFIX and API_DOMAIN entries to .env
+#fix database credentials in .env
 npm install -g gulp bower
 npm install
 bower install
