--- a/angular/app/landing/landing.less
+++ b/angular/app/landing/landing.less
@@ -1,28 +1,95 @@
-.Landing-CallToAction {
-  text-align: center;
+@import "../../material/project";
+
+.Landing{
+    height: 100%;
+    padding-top: 62px;
 }
 
-.Landing-flex {
-  min-height: 50px;
-  padding: 5px;
-  color: white;
+.Landing-cover{
+    background-image: url('/img/cover.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 700px;
 }
 
-.Landing-flex33 {
-  background-color: #009688;
+.Landing-heading,
+.Landing-subtitle{
+    color: white;
 }
 
-.Landing-flex55 {
-  background-color: #3949ab;
+.Landing-getStarted{
+    padding: 10px 12px;
 }
 
-.Landing-flexRemaining {
-  background-color: #9c27b0;
+.Landing-laravelAngular{
+    position: relative;
 }
 
-.Landing-demoIcon {
-  fill: rgb(0, 150, 136);
-  position: relative;
-  top: 4px;
-  left: 5px;
+.Landing-ampersand{
+    font-size: 50px;
+    color: @brand;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.Landing-angular{
+    background-color: lighten(@light-gray, 20%);
+}
+
+.Landing-laravel,
+.Landing-angular{
+    text-align: center;
+    color: @navy;
+}
+
+.Landing-laravelAngular-title{
+    padding-top: 35px;
+}
+
+.Landing-laravelAngular-subtitle{
+    color: @gray;
+}
+
+.DemoCode{
+    overflow: auto !important;
+    padding: 10px;
+    line-height: 1.428571429;
+    color: #333333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    width: 80%;
+    margin: 10px auto 30px;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.DemoCode-highlight{
+    color: @brand;
+}
+
+.DemoCode-comment{
+    color: @light-gray;
+}
+
+.DemoCode-operator{
+    color: @gray;
+}
+
+.DemoCode-string{
+    color: #43A047;
+}
+
+.DemoCode-secondary{
+    color: #FFC107;
+}
+
+.Landing-features{
+    text-align: center;
+    margin-top: 60px;
 }
