Design review for demo

--- a/angular/app/footer/footer.less
+++ b/angular/app/footer/footer.less
@@ -2,12 +2,17 @@
 
 .Footer{
     text-align: center;
-    background-color: lighten(@light-gray, 25%);
+    background-color: @background;
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
+.Footer-text{
+    opacity: 0.6;
+    color: @grey;
+}
+
 .Footer-link{
     text-decoration: none;
-    color: @navy;
+    color: @grey;
 }
