--- a/angular/app/header/header.less
+++ b/angular/app/header/header.less
@@ -1,7 +1,7 @@
 @import "../../material/project";
 
 .DemoHeader {
-    height: 62px;
+    height: 64px;
     background-color: white;
     position: absolute;
     top: 0;
@@ -15,13 +15,13 @@
 }
 
 .DemoHeader-logo {
-    width: 150px;
-    height: 40px;
+    width: 171px;
+    height: 41px;
 }
 
 .DemoHeader-link{
     text-decoration: none;
-    color: @dark-gray;
+    color: @black;
     padding: 10px 20px;
     display: inline-block;
     transition: 250ms background-color;
