--- a/angular/material/project.less
+++ b/angular/material/project.less
@@ -1,7 +1,6 @@
-@brand: #00A4C8;
+@brand: #00A4C6;
+@black: #535362;
+@grey: #888888;
 @navy: #21455B;
-@dark-gray: #535362;
-@gray: #757584;
-@light-gray: #A8A8B7;
-@background: #F6F9FA;
 @border: #E9F0F3;
+@background: #F6F9FA;
