Design fixes & enhancements

--- a/angular/app/header/header.less
+++ b/angular/app/header/header.less
@@ -10,22 +10,23 @@
     z-index: 10;
 }
 
-.DemoHeader-container {
-    padding-top: 13px;
+.DemoHeader-container{
+    height: 100%;
 }
 
 .DemoHeader-logo {
     width: 171px;
     height: 41px;
+    padding-top: 13px;
 }
 
 .DemoHeader-link{
     text-decoration: none;
     color: @black;
-    padding: 10px 20px;
+    padding: 0 20px;
     display: inline-block;
     transition: 250ms background-color;
-    border-radius: 5px;
+    line-height: 64px;
 }
 
 .DemoHeader-link:hover{
