--- a/angular/app/footer/footer.less
+++ b/angular/app/footer/footer.less
@@ -3,16 +3,27 @@
 .Footer{
     text-align: center;
     background-color: @background;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    border-top: 1px solid @border;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .Footer-text{
-    opacity: 0.6;
+    padding-top: 10px;
+    opacity: 0.8;
     color: @grey;
 }
 
 .Footer-link{
     text-decoration: none;
     color: @grey;
+}
+
+.Footer-link:hover{
+    text-decoration: underline;
+}
+
+.Footer-logo{
+    width: 49px;
+    height: 46px;
 }
